--- a/index.html
+++ b/index.html
@@ -7,6 +7,89 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <!-- header start -->
+    <header>
+        <link rel="stylesheet" href="/styles/style.css">
+    </header>
+    <!-- header end -->
+
+    <!-- Website main section -->
+    <main>
+        <section class="container">
+            <div class="top-players">
+                <h2 class="top-section-heading">Top Player</h2>
+                <div class="players">
+                    <div class="player">
+                        <img src="images/players/player-1.png" alt="">
+                        <h3 class="player-name" class="player-name">John Smith</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-2.png" alt="">
+                        <h3 class="player-name">Pro Rasel</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-3.png" alt="">
+                        <h3 class="player-name">Abu Sufian</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-4.png" alt="">
+                        <h3 class="player-name">Shajedul Karim</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-5.png" alt="">
+                        <h3 class="player-name">Maruf Ahmed</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-6.png" alt="">
+                        <h3 class="player-name">Mujahid</h3>
+                    </div>
+                </div>
+                </div>
+                <hr>
+                <h2 class="top-section-heading">Top Blog</h2>
+                <div class="top-blog">
+                    <article class="blogs">
+                        <div class="thumbnail">
+                            <img src="images/blogs/blog-1.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">13 of My Favorite UI/UX Goodies</h3>
+                            <p class="author">By <a href="">Danny Sapio</a></p>
+                        </div>
+                    </article>
+                    <article class="blogs">
+                        <div class="thumbnail">
+                            <img src="images/blogs/blog-2.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">13 of My Favorite UI/UX Goodies</h3>
+                            <p class="author">By <a href="">Danny Sapio</a></p>
+                        </div>
+                    </article>
+                    <article class="blogs">
+                        <div class="thumbnail">
+                            <img src="images/blogs/blog-3.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">13 of My Favorite UI/UX Goodies</h3>
+                            <p class="author">By <a href="">Danny Sapio</a></p>
+                        </div>
+                    </article>
+                    <article class="blogs">
+                        <div class="thumbnail">
+                            <img src="images/blogs/blog-1.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">13 of My Favorite UI/UX Goodies</h3>
+                            <p class="author">By <a href="">Danny Sapio</a></p>
+                        </div>
+                    </article>
+                </div>
+        </section>
+        <section class="container">
+            <h2 class="top-section-heading">Latest Course</h2>
+        </section>
+    </main>
+    <!-- Website main section end -->
 </body>
 </html>
