--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- css style sheet -->
+    <link rel="stylesheet" href="/styles/style.css">
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/b5e0c7daed.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <!-- header start -->
     <header>
-        <link rel="stylesheet" href="/styles/style.css">
+
     </header>
     <!-- header end -->
 
@@ -88,6 +92,74 @@
         </section>
         <section class="container">
             <h2 class="top-section-heading">Latest Course</h2>
+        <div class="courses">
+            <div class="course">
+                <div class="course-image">
+                    <img src="images/courses/course-1.png" alt="">
+                </div>
+                <div class="course-detail">
+                    <h3 class="course-title">React - The Complete Guide -2022</h3>
+                    <p class="course-author">Reed Krakoff.</p>
+                </div>
+                <div class="course-info">
+                <div>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i id="grey-rating" class="fa-solid fa-star"></i>
+                <span>4.5</span>
+                </div>
+                <div class="clock">
+                    <i class="fa-regular fa-clock"></i><span id="hour">1:30hr</span>
+                </div>
+            </div>
+            </div>
+            <div class="course">
+                <div class="course-image">
+                    <img src="images/courses/course-1.png" alt="">
+                </div>
+                <div class="course-detail">
+                    <h3 class="course-title">React - The Complete Guide -2022</h3>
+                    <p class="course-author">Reed Krakoff.</p>
+                </div>
+                <div class="course-info">
+                <div>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i id="grey-rating" class="fa-solid fa-star"></i>
+                <span>4.5</span>
+                </div>
+                <div class="clock">
+                    <i class="fa-regular fa-clock"></i><span id="hour">1:30hr</span>
+                </div>
+            </div>
+            </div>
+            <div class="course">
+                <div class="course-image">
+                    <img src="images/courses/course-1.png" alt="">
+                </div>
+                <div class="course-detail">
+                    <h3 class="course-title">React - The Complete Guide -2022</h3>
+                    <p class="course-author">Reed Krakoff.</p>
+                </div>
+                <div class="course-info">
+                <div>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i id="grey-rating" class="fa-solid fa-star"></i>
+                <span>4.5</span>
+                </div>
+                <div class="clock">
+                    <i class="fa-regular fa-clock"></i><span id="hour">1:30hr</span>
+                </div>
+            </div>
+            </div>
+        </div>            
         </section>
     </main>
     <!-- Website main section end -->
